2011-07-7 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #26791: sending external URL was faild. bug in fetching process

2011-05-10 Jacob Rasmussen <jacob@lightbulb.dk>
	* Bug #9787: Wrong permissions for tx_directmail_dmailer_log.txt

2011-05-09 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #7152: Fix importer for non admin user
	* Updated documentation
	* Bug #26392: SQL compatibility

2011-03-24 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #13124: depreciation log messages with typo 4.5

2011-03-25  Benjamin Mack  <benni@typo3.org>
	* Added new feature: Create Direct Mail "drafts" that can be used as templates for new Direct Mails
	* Added new feature: Create a scheduler task to create new Direct Mails out of Direct Mail Drafts
	* Made all modules templateable
	* Updated look+feel of all modules to fit 4.4 styles
	* Made use of message boxes of TYPO3 to display error messages or warning messages the right way
	
2011-03-16 Ivan Kartolo <ivan.kartolo@dkd.de>
	* release 2.6.10 (typo3-sa-2011-002)
	
2011-01-05 Ivan Kartolo <ivan.kartolo@dkd.de>
	* release 2.6.9
	
2010-12-13 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Update documentation

2010-12-8 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #5864: Recursive FE groups (thanks to Stephan Grossberndt)

2010-10-31 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #10166: TCA Icon using SpriteManager if 4.4.x is installed
	* Bug #10327: eregi_replace (in pi1) is deprecated

2010-09-01 Ivan Kartolo <ivan.kartolo@dkd.de>
	* release 2.6.8

2010-09-01 Ivan Kartolo <ivan.kartolo@dkd.de>
	* added custom folder icon for direct mail sysfolder
	* added icon sprites for pages icon

2010-08-12 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #9252: deprecated ereg function (thanks to Gregor Hermens)
	* show invalid email from plainlist (thanks to Xavier Perseguers)  
	* Bug #8051: Added TYPO3_CONF_VARS in CLI
	
2010-07-02 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #6744: wrong statistics counter
	* Bug #7425: added authcode_fieldList in list of fields
